--- a/templates/pages/artists.html
+++ b/templates/pages/artists.html
@@ -4,7 +4,7 @@
 <ul class="items">
 	{% for artist in artists %}
 	<li>
-		<a href="/artists/{{ artist.id }}">
+		<a href="/artists/{{ artist.artist_id }}">
 			<i class="fas fa-users"></i>
 			<div class="item">
 				<h5>{{ artist.name }}</h5>
