--- a/templates/pages/search_venues.html
+++ b/templates/pages/search_venues.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/main.html' %}
 {% block title %}Fyyur | Venues Search{% endblock %}
 {% block content %}
-<h3>Number of search results for "{{ search_term }}": {{ results.count }}</h3>
+<h3>Number of search results for "{{ search_term }}": {{ results.count(venue_name) }}</h3>
 <ul class="items">
 	{% for venue in results.data %}
 	<li>
