--- a/templates/pages/venues.html
+++ b/templates/pages/venues.html
@@ -1,19 +1,21 @@
 {% extends 'layouts/main.html' %}
 {% block title %}Fyyur | Venues{% endblock %}
 {% block content %}
-{% for area in areas %}
-<h3>{{ area.city }}, {{ area.state }}</h3>
-	<ul class="items">
-		{% for venue in area.venues %}
-		<li>
-			<a href="/venues/{{ venue.id }}">
-				<i class="fas fa-music"></i>
-				<div class="item">
-					<h5>{{ venue.name }}</h5>
-				</div>
-			</a>
-		</li>
-		{% endfor %}
-	</ul>
+{% for area in areas |groupby('city') %}
+	<h3>{{ area[0] }}, {{ area[2] }}</h3>
+		<ul class="items">
+
+			{% for venue in area.list %}
+			<li>
+				<a href="/venues/{{ venue.venue_id }}">
+					<i class="fas fa-music"></i>
+					<div class="item">
+
+						<h5>{{ venue.name }}</h5>
+					</div>
+				</a>
+			</li>
+			{% endfor %}
+		</ul>
 {% endfor %}
 {% endblock %}
