--- a/templates/pages/search_venues.html
+++ b/templates/pages/search_venues.html
@@ -1,11 +1,11 @@
 {% extends 'layouts/main.html' %}
 {% block title %}Fyyur | Venues Search{% endblock %}
 {% block content %}
-<h3>Number of search results for "{{ search_term }}": {{ results.count(venue_name) }}</h3>
+<h3>Number of search results for "{{ search_term }}": {{ results.count() }}</h3>
 <ul class="items">
-	{% for venue in results.data %}
+	{% for venue in results %}
 	<li>
-		<a href="/venues/{{ venue.id }}">
+		<a href="/venues/{{venue.venue_id}}">
 			<i class="fas fa-music"></i>
 			<div class="item">
 				<h5>{{ venue.name }}</h5>
