--- a/templates/pages/show_artist.html
+++ b/templates/pages/show_artist.html
@@ -10,9 +10,9 @@
 			ID: {{ artist.artist_id }}
 		</p>
 		<div class="genres">
-			<!-- {% for genre in artist.genres %}
+			{% for genre in artist.genres %}
 			<span class="genre">{{ genre }}</span>
-			{% endfor %} -->
+			{% endfor %} 
 		</div>
 		<p>
 			<i class="fas fa-globe-americas"></i> {{ artist.city }}, {{ artist.state }}
