artist search and display done, redirects to artist page

--- a/templates/pages/search_artists.html
+++ b/templates/pages/search_artists.html
@@ -1,11 +1,11 @@
 {% extends 'layouts/main.html' %}
 {% block title %}Fyyur | Artists Search{% endblock %}
 {% block content %}
-<h3>Number of search results for "{{ search_term }}": {{ results.count }}</h3>
+<h3>Number of search results for "{{ search_term }}": {{ results.count() }}</h3>
 <ul class="items">
-	{% for artist in results.data %}
+	{% for artist in results %}
 	<li>
-		<a href="/artists/{{ artist.id }}">
+		<a href="/artists/{{ artist.artist_id }}">
 			<i class="fas fa-users"></i>
 			<div class="item">
 				<h5>{{ artist.name }}</h5>
