fixed shows page,added shows search, fixed city state display grouping on venue page

--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -7,7 +7,7 @@
 			{{ venue.name }}
 		</h1>
 		<p class="subtitle">
-			ID: {{ venue.id }}
+			ID: {{ venue.venue_id }}
 		</p>
 		<div class="genres">
 			{% for genre in venue.genres %}
