--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -75,6 +75,17 @@
                   aria-label="Search">
               </form>
               {% endif %}
+              {% if (request.endpoint == 'shows') or
+                (request.endpoint == 'search_shows') or
+                (request.endpoint == 'show_show') %}
+              <form class="search" method="post" action="/shows/search">
+                <input class="form-control"
+                  type="search"
+                  name="search_term"
+                  placeholder="Find a Show"
+                  aria-label="Search">
+              </form>
+              {% endif %}
             </li>
           </ul>
           <ul class="nav navbar-nav">
@@ -101,7 +112,7 @@
       {% endwith %}
 
       {% block content %}{% endblock %}
-      
+
     </main>
 
   </div>
