show artists and venue show past and upcoming shows now

--- a/templates/pages/show_artist.html
+++ b/templates/pages/show_artist.html
@@ -12,7 +12,7 @@
 		<div class="genres">
 			{% for genre in artist.genres %}
 			<span class="genre">{{ genre }}</span>
-			{% endfor %} 
+			{% endfor %}
 		</div>
 		<p>
 			<i class="fas fa-globe-americas"></i> {{ artist.city }}, {{ artist.state }}
@@ -44,28 +44,28 @@
 	</div>
 </div>
 <section>
-	<h2 class="monospace">{{ artist.upcoming_shows_count }} Upcoming {% if artist.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
+	<h2 class="monospace">{{ artist.upcoming_shows(artist.artist_id).count() }} Upcoming {% if artist.upcoming_shows(artist.artist_id).count() == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
-		{%for show in upcoming_shows %}
+		{%for show in artist.upcoming_shows(artist.artist_id) %}
 		<div class="col-sm-4">
 			<div class="tile tile-show">
-				<img src="{{ show.venue_image_link }}" alt="Show Venue Image" />
-				<h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
-				<h6>{{ show.start_time|datetime('full') }}</h6>
+				<img src="{{ show.Venue.image_link }}" alt="Show Venue Image" />
+				<h5><a href="/venues/{{ show.Venue.venue_id }}">{{ show.Venue.name }}</a></h5>
+				<h6>{{ show.Shows.start_time.strftime('%m-%d-%Y %H:%M') }}</h6>
 			</div>
 		</div>
 		{% endfor %}
 	</div>
 </section>
 <section>
-	<h2 class="monospace">{{ artist.past_shows_count }} Past {% if artist.past_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
+	<h2 class="monospace">{{ artist.past_shows(artist.artist_id).count() }} Past {% if artist.past_shows(artist.artist_id).count() == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
-		{%for show in past_shows %}
+		{%for show in artist.past_shows(artist.artist_id) %}
 		<div class="col-sm-4">
 			<div class="tile tile-show">
-				<img src="{{ show.venue_image_link }}" alt="Show Venue Image" />
-				<h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
-				<h6>{{ show.start_time|datetime('full') }}</h6>
+				<img src="{{ show.Venue.image_link }}" alt="Show Venue Image" />
+				<h5><a href="/venues/{{ show.Venue.venue_id }}">{{ show.Venue.name }}</a></h5>
+				<h6>{{ show.Shows.start_time.strftime('%m-%d-%Y %H:%M') }}</h6>
 			</div>
 		</div>
 		{% endfor %}
