--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -47,30 +47,30 @@
 	</div>
 </div>
 <section>
-	<h2 class="monospace">{{ venue.upcoming_shows_count }} Upcoming {% if venue.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
+	<h2 class="monospace">{{ venue.upcoming_shows(venue.venue_id).count() }} Upcoming {% if venue.upcoming_shows(venue.venue_id).count() == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
-		{%for show in venue.upcoming_shows %}
-		<!-- <div class="col-sm-4">
+		{%for show in venue.upcoming_shows(venue.venue_id) %}
+		<div class="col-sm-4">
 			<div class="tile tile-show">
-				<img src="{{ show.artist_image_link }}" alt="Show Artist Image" />
-				<h5><a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a></h5>
-				<h6>{{ show.start_time|datetime('full') }}</h6>
+				<img src="{{ show.Artist.image_link }}" alt="Show Artist Image" />
+				<h5><a href="/artists/{{ show.Artist.artist_id }}">{{ show.Artist.name }}</a></h5>
+				<h6>{{ show.Shows.start_time.strftime('%m-%d-%Y %H:%M') }}</h6>
 			</div>
-		</div> -->
+		</div>
 		{% endfor %}
 	</div>
 </section>
 <section>
-	<h2 class="monospace">{{ venue.past_shows_count }} Past {% if venue.past_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
+	<h2 class="monospace">{{ venue.past_shows(venue.venue_id).count() }} Past {% if venue.past_shows(venue.venue_id).count() == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
-		{%for show in venue.past_shows %}
-		<!-- <div class="col-sm-4">
+		{%for show in venue.past_shows(venue.venue_id) %}
+		<div class="col-sm-4">
 			<div class="tile tile-show">
-				<img src="{{ show.artist_image_link }}" alt="Show Artist Image" />
-				<h5><a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a></h5>
-				<h6>{{ show.start_time|datetime('full') }}</h6>
+				<img src="{{ show.Artist.image_link }}" alt="Show Artist Image" />
+				<h5><a href="/artists/{{ show.Artist.artist_id }}">{{ show.Artist.name }}</a></h5>
+				<h6>{{ show.Shows.start_time.strftime('%m-%d-%Y %H:%M') }}</h6>
 			</div>
-		</div> -->
+		</div>
 		{% endfor %}
 	</div>
 </section>
