--- a/templates/forms/edit_artist.html
+++ b/templates/forms/edit_artist.html
@@ -37,8 +37,13 @@
             {{ form.image_link(class_ = 'form-control', placeholder='http://', id=form.image_link, autofocus = true) }}
         </div>
         <div class="form-group">
-          <label for="seeking_venue">Seeking Venue? </label>
-          
+              <label for="seeking_venue">Seeking Venue</label>
+              {{ form.seeking_venue(class_ = 'form-control', placeholder='y/n', id=form.seeking_venue, autofocus = true) }}
+        </div>
+        <div class="form-group">
+              <label for="seeking_description">Seeking Description</label>
+              {{ form.seeking_description(class_ = 'form-control', placeholder='', id=form.seeking_description, autofocus = true) }}
+        </div>
       <input type="submit" value="Edit Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
