--- a/templates/forms/edit_venue.html
+++ b/templates/forms/edit_venue.html
@@ -40,6 +40,14 @@
           <label for="website">Website</label>
           {{ form.website(class_ = 'form-control', placeholder='http://', id=form.website, autofocus = true) }}
         </div>
+        <div class="form-group">
+              <label for="seeking_talent">Seeking Talent</label>
+              {{ form.seeking_talent(class_ = 'form-control', placeholder='y/n', id=form.seeking_talent, autofocus = true) }}
+        </div>
+        <div class="form-group">
+              <label for="seeking_description">Seeking Description</label>
+              {{ form.seeking_description(class_ = 'form-control', placeholder='', id=form.seeking_description, autofocus = true) }}
+        </div>  
       <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
